--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
 <VideoView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/splashScreenvideoView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 </VideoView>
 
