--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<VideoView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/splashScreenvideoView"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
-</VideoView>
 
+    <VideoView
+        android:id="@+id/splashScreenvideoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></VideoView>
+</RelativeLayout>
